--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,6 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile
-    command: sh -c "sleep 10 && gunicorn -w 2 -b 0.0.0.0:8080 -k aiohttp.worker.GunicornWebWorker asgi:app"
+    command: sh -c "gunicorn -w 1 -b 0.0.0.0:8080 -k aiohttp.worker.GunicornWebWorker asgi:app"
     ports:
       - 8080:8080
