--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
-  websocket:
-    container_name: websocket
+  server:
+    container_name: server
     build:
       context: .
       dockerfile: docker/Dockerfile
@@ -18,4 +18,4 @@ services:
     ports:
       - 3000:3000
     depends_on:
-      - websocket
+      - server
