--- a/client/package.json
+++ b/client/package.json
@@ -7,5 +7,9 @@
   "private": true,
   "devDependencies": {
     "live-server": "https://github.com/acco/live-server/tarball/master"
+  },
+  "dependencies": {
+    "@otplib/preset-browser": "^12.0.1",
+    "otplib": "12.0.1"
   }
 }
