--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
     command: sh -c "gunicorn -w 1 -b 0.0.0.0:8080 -k aiohttp.worker.GunicornWebWorker asgi:app"
     ports:
       - 8080:8080
+    depends_on:
+      - redis
 
   client:
     container_name: client
@@ -19,3 +21,8 @@ services:
       - 3000:3000
     depends_on:
       - server
+
+  redis:
+    image: redis:6.0.9-alpine
+    ports:
+      - 6379:6379
