--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,7 @@ chardet==3.0.4
 gunicorn==20.0.4
 idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 multidict==5.0.2; python_version >= '3.5'
+pyotp==2.4.1
+redis==3.5.3
 typing-extensions==3.7.4.3
 yarl==1.6.3; python_version >= '3.6'
